--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,11 @@ h2 {
 }
 
 p {
+  box-sizing: border-box;
+  -ms-flex-align: center;
   font-size: 20px;
+  margin-left: 15px;
+
 }
 
 ul {
@@ -26,6 +30,7 @@ margin-left: 0%;
 form {
 margin: 0 auto;
 width: auto;
+max-width: 750px;
 background-color: silver;
 padding: 1em;
 border: 1px solid rgb(2, 43, 29);
