--- a/css/styles.css
+++ b/css/styles.css
@@ -34,11 +34,14 @@ width: auto;
 max-width: 750px;
 background-color: silver;
 padding: 1em;
-border: 1px solid rgb(2, 43, 29);
+border: 3px solid rgb(2, 43, 29);
 border-radius: 1em;
 }
 
 button {
+font-size: 15px;
+font-style: italic;
+font-weight: bold;
 border: 1px solid rgb(77, 190, 153);
 border-radius: 5em;
 box-sizing: content-box;
